Bug 60557 - REGRESSION (r86077): Web Inspector uses CG font rendering in WebKit2 on Windows
Summary: REGRESSION (r86077): Web Inspector uses CG font rendering in WebKit2 on Windows
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Adam Roben (:aroben)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-10 09:43 PDT by Adam Roben (:aroben)
Modified: 2011-05-10 09:47 PDT (History)
1 user (show)

See Also:


Attachments
Patch (2.74 KB, patch)
2011-05-10 09:43 PDT, Adam Roben (:aroben)
darin: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Roben (:aroben) 2011-05-10 09:43:12 PDT
REGRESSION (r86077): Web Inspector uses CG font rendering in WebKit2 on Windows
Comment 1 Adam Roben (:aroben) 2011-05-10 09:43:39 PDT
Created attachment 92969 [details]
Patch
Comment 2 Adam Roben (:aroben) 2011-05-10 09:47:09 PDT
Committed r86161: <http://trac.webkit.org/changeset/86161>