Use FontSmoothingLevelWindows by default on Windows

Fixes <http://webkit.org/b/60557> REGRESSION (r86077): Web Inspector uses CG font rendering
in WebKit2 on Windows

Reviewed by Darin Adler.

* Shared/WebPreferencesStore.h: Added and deployed a new DEFAULT_WEBKIT_FONT_SMOOTHING_LEVEL
macro to let Windows have a different default font smoothing level from other platforms.

* UIProcess/API/C/WKPreferencesPrivate.h: Updated the comment about the default font
smoothing level.

Canonical link: https://commits.webkit.org/75825@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86161 268f45cc-cd09-0410-ab3c-d52691b4dbfc